selfhost/test/typechecker/typedecl/error_invalid_hash_signature.out
Error at %FILE_NAME%:2:8
Invalid signature for method 'hash'
  |    func hash(self): Bool {}
            ^
