selfhost/test/typechecker/typedecl/error_invalid_hash_signature.abra
type Foo {
  func hash(self): Bool {}
}